--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "ado-node",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.2",
+  "description": "ts-decorator for express server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "ts-node-dev --project tsconfig.server.json src/server",
     "build": "tsc --project tsconfig.server.json"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "express",
+    "ts",
+    "decorator",
+    "ioc"
+  ],
+  "author": "chelizichen",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
