--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ado-node",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "ts-decorator for express server",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,9 @@
   "author": "chelizichen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/mysql": "^2.15.21",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
