--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "ado-node",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "ts-decorator for express server",
   "main": "index.js",
+  "repository": {
+    "url": "https://github.com/chelizichen/ado-node",
+    "type": "git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "ts-node-dev --project tsconfig.server.json src/server",
