文件结构更新

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,6 +5,5 @@
     "module": "commonjs",
     "noEmit": false
   },
-  "include": ["src/*.ts"],
-  "exclude": ["src/client"]
+  "include": ["src/*.ts"]
 }
