--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "ado-node",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "ts-decorator for express server",
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "repository": {
     "url": "https://github.com/chelizichen/ado-node",
     "type": "git"
   },
   "scripts": {
-    "test": "ts-node-dev --project tsconfig.server.json test/server",
+    "test": "ts-node-dev --project tsconfig.json test/server",
     "build": "tsc --project tsconfig.server.json"
   },
   "keywords": [
@@ -22,12 +28,14 @@
   "dependencies": {
     "@types/mysql": "^2.15.21",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^6.2.3",
     "typescript": "^4.6.4"
   }
 }
