--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ado-node",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "ts-decorator for express server",
   "exports": {
     ".": {
@@ -14,7 +14,7 @@
     "type": "git"
   },
   "scripts": {
-    "test": "ts-node-dev --project tsconfig.json test/server",
+    "test": "ts-node-dev --project tsconfig.server.json test/server",
     "build": "tsc --project tsconfig.server.json"
   },
   "keywords": [
