--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,9 +1,9 @@
-// {
-//   "extends": "./tsconfig.json",
-//   "compilerOptions": {
-//     "outDir": "dist",
-//     "module": "commonjs",
-//     "noEmit": false
-//   },
-//   "include": ["src/*.ts"]
-// }
+{
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "commonjs",
+    "noEmit": false
+  },
+  "include": ["src/*.ts"]
+}
