--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "CommonJS",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "moduleResolution": "Node",
+    "noImplicitThis": false,
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
