--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "author": "chelizichen",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql": "^2.15.21",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "redis": "^4.3.1",
     "ts-node": "^10.9.1"
