--- a/package.json
+++ b/package.json
@@ -5,24 +5,34 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --project tsconfig.server.json src/index.ts",
-    "build": "tsc --project tsconfig.server.json"
+    "dev": "npm run dev:server & npm run dev:client",
+    "dev:server": "ts-node-dev --project tsconfig.server.json src/index.ts",
+    "dev:client": "vite",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:client": "tsc && vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/mysql": "^2.15.21",
-    "ado-node": "^1.5.0",
+    "ado-node": "^1.8.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "redis": "^4.3.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "ts-node-dev": "^2.0.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.1",
+    "vite": "^3.0.7",
     "typescript": "^4.6.4"
   }
 }
