--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run build:client & npm run build:server",
     "build:client": "vite build",
     "build:server": "tsc --project tsconfig.server.json",
-    "preview": "vite preview & node dist/index.js"
+    "preview": "vite preview & node dist/index.js",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,33 +20,33 @@
   "dependencies": {
     "@types/mysql": "^2.15.21",
     "ado-node": "^1.8.1",
+    "axios": "^0.27.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
-    "redis": "^4.3.1",
-    "ts-node": "^10.9.1",
-    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "redis": "^4.3.1",
+    "ts-node": "^10.9.1",
     "vite-plugin-html": "^3.2.0",
-    "zustand": "^4.0.0",
-    "ejs": "^3.1.8"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@babel/core": "^7.15.8",
     "@types/react-router-dom": "^5.3.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@vitejs/plugin-react": "^2.0.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-loader": "^8.2.3",
     "concurrently": "^6.3.0",
     "http-proxy-middleware": "^2.0.1",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.7"
   }
 }
