--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@types/mysql": "^2.15.21",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "redis": "^4.3.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.6.3",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.2.3",
