--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "dependencies": {
     "@types/execa": "^2.0.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "execa": "^6.1.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "redis": "^4.3.1",
     "ts-node": "^10.9.1",
