--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "redis": "^4.3.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "urllib": "^3.3.1"
   },
