--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ado-node",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "ts-decorator for express server",
+  "bin": {
+    "ado": "bin/index.js"
+  },
   "exports": {
     ".": {
       "require": "./dist/index.js",
@@ -27,9 +30,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-ws": "^3.0.1",
+    "commander": "^9.4.1",
+    "ejs": "^3.1.8",
     "execa": "^6.1.0",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
+    "fs-extra": "^11.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
