--- a/.npmignore
+++ b/.npmignore
@@ -11,3 +11,9 @@ todo
 public
 
 doc
+
+bin/src/createAppTemplate/ado-node/node_modules
+
+bin/src/createAppTemplate/ado-node-vue-ssr(vite)/node_modules
+
+ado.config.ts
