--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ado-node",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "ts-decorator for express server",
   "bin": {
     "ado": "bin/index.js"
@@ -36,6 +36,7 @@
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
     "fs-extra": "^11.1.0",
+    "inquirer": "^7.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
