--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "test": "ts-node-dev --project tsconfig.server.json test/server",
-    "build": "tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test/ && npm publish",
+    "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test/ && npm publish",
     "commit": "hasaky commit"
   },
   "keywords": [
