--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ bin/src/createAppTemplate/ado-node/node_modules
 bin/src/createAppTemplate/ado-node-vue-ssr(vite)/node_modules
 
 ado.config.ts
+
+dist
