v.2.6.x -CLI 打包 压缩 缓存设计

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "ts-node-dev --project tsconfig.server.json test/server",
     "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test",
     "commit": "hasaky commit",
-    "release": "ado-cli release --force"
+    "release": "ado-cli release AdoSSrServerDemo"
   },
   "keywords": [
     "express",
