--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ado-node",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "ts-decorator for express server",
   "bin": {
     "ado": "bin/index.js",
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "test": "ts-node-dev --project tsconfig.server.json test/server",
+    "test1": "ts-node-dev --project tsconfig.server.json test/rpc/server.rpc.ts",
     "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test",
     "commit": "hasaky commit",
     "release": "ado-cli release AdoSSrServerDemo"
