--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "test": "ts-node-dev --project tsconfig.server.json test/server",
-    "test1": "ts-node-dev --project tsconfig.server.json test/rpc/server.rpc.ts",
+    "test1": "ts-node-dev --project tsconfig.server.json test/rpc/server/server.ts",
     "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test",
     "commit": "hasaky commit",
     "release": "ado-cli release AdoSSrServerDemo"
