--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "test": "ts-node-dev --project tsconfig.server.json test/server",
     "test1": "ts-node-dev --project tsconfig.server.json test/rpc/server/server.ts",
+    "test2":"ts-node-dev --project tsconfig.server.json test/rpc/arc/a.ts",
     "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test",
     "commit": "hasaky commit",
     "release": "ado-cli release AdoSSrServerDemo"
@@ -50,7 +51,8 @@
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "urllib": "^3.3.1"
+    "urllib": "^3.3.1",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
