--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "bin": {
     "ado": "bin/index.js",
     "ado-cli": "bin/dev.js",
-    "hasaky": "bin/hasaky.js"
+    "hasaky": "bin/hasaky.js",
+    "arc":"bin/proto.js"
   },
   "exports": {
     ".": {
@@ -21,7 +22,7 @@
   "scripts": {
     "test": "ts-node-dev --project tsconfig.server.json test/server",
     "test1": "ts-node-dev --project tsconfig.server.json test/rpc/server/server.ts",
-    "test2": "ts-node-dev --project tsconfig.server.json test/rpc/arc/a.ts",
+    "test2": "ts-node-dev --project tsconfig.server.json bin/src/rpc/arc.ts",
     "test3": "tsc --project test/rpc/arc/a.ts ",
     "build": "rm -r dist && mkdir dist && tsc --project tsconfig.server.json && tsup index.ts --format cjs,esm && rm -r  dist/test",
     "commit": "hasaky commit",
