fix bug: v2.8.x client-side can not recieve buffer

--- a/test/arc/struct/common.yaml
+++ b/test/arc/struct/common.yaml
@@ -16,3 +16,15 @@ struct:
   JumpResponse:
     message: string
   
+  WoffRequest:
+    message: string
+
+  WoffResponse:
+    message: string
+
+  EatRequest:
+    message: string
+
+  EatResponse:
+    message: string
+
