--- a/test/arc/interface/DogInterFace.yaml
+++ b/test/arc/interface/DogInterFace.yaml
@@ -6,18 +6,14 @@ interFace:
   # 注释
   description: "用于编写 Dog 接口的配置文件"
 
-  # 生成 rpc 服务文件地址
-  server:
-    path: test/rpc/arc
-
-  # 生成 rpc 客户端文件地址
   client:
-    path: test/rpc/arc
     controller: dog
 method:
-  hello:
-    req: HelloRequest
-    res: HelloResponse
-  jump: 
-    req: JumpRequest
-    res: JumpResponse
+  woff:
+    req: WoffRequest
+    res: WoffResponse
+  eat: 
+    req: EatRequest
+    res: EatResponse
+
+    
