rpc controller 支持 ioc

--- a/arc.config.yaml
+++ b/arc.config.yaml
@@ -9,3 +9,12 @@ arc:
   generate: 
     server: test/rpc/server/interface
     client: test/rpc/client/controller
+
+database:
+  type: mysql
+  host: localhost
+  username: root
+  password: 123456
+  database: zrq_shop
+  port: 3306
+  connectionLimit: 10
