fix bug : 打包和 esm 的问题

--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/tsconfig.server.json
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/tsconfig.server.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "noEmit": false
   },
-  "include": ["src/*.ts","ado.config.ts"],
+  "include": ["src/*.ts"],
   "exclude": ["src/client"]
 }
