--- a/bin/src/createAppTemplate/ado-rpc-server/rpc/modules/module.yaml
+++ b/bin/src/createAppTemplate/ado-rpc-server/rpc/modules/module.yaml
@@ -1,9 +1,7 @@
 module:
   # 模块接口
   interFace:
-    - AnimalInterFace
-    - DogInterFace
+    - Hello
   # 模块需要的结构体参数
   struct:
     - common
-  # 所包含的其他模块
