--- a/bin/src/createAppTemplate/ado-rpc-server/arc.config.yaml
+++ b/bin/src/createAppTemplate/ado-rpc-server/arc.config.yaml
@@ -2,9 +2,9 @@
 arc:
   # yaml 配置文件
   yaml: 
-    modules: src/yaml/modules
-    interface: src/yaml/interface
-    struct: src/yaml/struct
+    modules: rpc/modules
+    interface: rpc/interface
+    struct: rpc/struct
   #  生成 client-server 的路径
   generate: 
     # 客户端生成rpc 接口文件需要的路径
