--- a/bin/src/createAppTemplate/ado-rpc-server/rpc/interface/Hello.yaml
+++ b/bin/src/createAppTemplate/ado-rpc-server/rpc/interface/Hello.yaml
@@ -1,19 +1,17 @@
-
 interFace:
   # 接口名称
-  name: AnimalInterFace
+  name: HelloInterFace
+  
   # rpc 服务 远程地址（客户端需要）
   remote: http://127.0.0.1:9000
+
   # 注释
-  description: "用于编写 Animal 接口的配置文件"
+  description: "用于编写 Hello 接口的配置文件"
 
   # 生成 rpc 客户端文件地址
   client:
-    controller: animal
+    controller: hello
 method:
   hello:
     req: HelloRequest
     res: HelloResponse
-  jump: 
-    req: JumpRequest
-    res: JumpResponse
